--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 p{
     color:rgb(0, 0, 0);
+    text-align: left;
     
 }
 h1{
@@ -14,7 +15,7 @@ h2{
     text-align: center;
 }
 body{
-    background-image: url('australia-coast-cliffs-nature.jpg');
+    background-image: url('R.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -28,11 +29,13 @@ body{
     flex-direction: row;
     background-color: #ffffff;
     position: absolute;
-    top: 0;
+    top: 25%;
     width: 40%;
-    left: 20%;
+    left: 22.5%;
     padding: 1.5%;
-}
+    height: 800px;
+    border: rgb(211, 219, 219) solid;
+    }
 .information{
     position: relative;
 }
@@ -44,30 +47,33 @@ body{
 display: flex;
 flex-direction: row;
 background-color: #ffffff;
-width: 30%;
+width: 25%;
 position: absolute;
-left: 65%;
-top: 0px;
-height: 500px;
-padding: 1.5%
+left: 70%;
+top: 25%;
+height: 800px;
+padding: 1.5%;
+border: rgb(211, 219, 219) solid;
 
 }
 .links{
     position: absolute;
-    top: 100px;
-    
-
+    top: 200px;   
 }
 .contact{
     display: flex;
     flex-direction: column;
     position: absolute;
     background-color: white;
-    padding: 1.6%;
-    top: 650px;
+    padding: 1.5%;
+    top: 550px;
     font-size: 20px;
+    width: 400px;
+    height: 370px;
+    border: rgb(211, 219, 219) solid;
+
     }
     .fel{
         position: absolute;
-        top: 80px;
-    }
+        top: 100px;
+        }
