--- a/style.css
+++ b/style.css
@@ -77,3 +77,12 @@ border: rgb(211, 219, 219) solid;
         position: absolute;
         top: 100px;
         }
+        .bild{
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 25%;
+            width: 20%;
+
+        }
