--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 }
 .second{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: #ffffff;
     position: absolute;
     top: 25%;
