--- a/style.css
+++ b/style.css
@@ -14,9 +14,6 @@ h2{
     color:rgb(0, 0, 0);
     text-align: center;
 }
-html {
-    display: block;
-}
 body{
     background-image: url('R.jpg');
     background-repeat: no-repeat;
@@ -25,64 +22,55 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
 .main{
     display: flex;
-    flex-direction: row;
-    font-size: 25px;
     align-items: center;
     width: 100%;
-    height: 60%;
+    height: 100%;
+    justify-content: space-around;
 }
 .contact{
     display: flex;
     flex-direction: column;
-    position: absolute;
     background-color: white;
-    left: 2%;
-    top: 10%;
     padding: 1.5%;
-    font-size: 20px;
-    width: 400px;
-    height: 800px;
+    width: 25%;
+    height: 80vh;
     border: rgb(211, 219, 219) solid;
 }
 .second{
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
-    position: absolute;
-    top: 10%;
     width: 40%;
-    left: 24.5%;
     padding: 1.5%;
-    height: 800px;
+    min-height: 80vh;
+    height: fit-content;
     border: rgb(211, 219, 219) solid;
     }
 .information{
-    position: relative;
 }
 .experince{
-    position: relative;
-
 }
 .third{
     display: flex;
     flex-direction: column;
-    position: absolute;
     background-color: #ffffff;
-    top: 10%;
     width: 25%;
-    left: 70%;
-    height: 800px;
+    min-height: 80vh;
+    height: fit-content;
     padding: 1.5%;
     border: rgb(211, 219, 219) solid;
 
 }
-.links{
-    position: relative;  
+.links{  
 }
-    .fel{
-        position: relative;
-        padding-right: 1.5%;
-    }
+.fel{
+}
+.list li{
+    margin: 1rem;
+    list-style: none;
+}
