--- a/style.css
+++ b/style.css
@@ -22,8 +22,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
 }
 .main{
     display: flex;
@@ -32,38 +30,36 @@ body{
     height: 100%;
     justify-content: space-around;
 }
+.main img{
+    width: 200px;
+}
 .contact{
-    display: flex;
-    flex-direction: column;
     background-color: white;
+    height: 80vh;
     padding: 1.5%;
     width: 25%;
-    height: 80vh;
     border: rgb(211, 219, 219) solid;
 }
 .second{
-    display: flex;
-    flex-direction: column;
     background-color: #ffffff;
     width: 40%;
     padding: 1.5%;
-    min-height: 80vh;
-    height: fit-content;
+    height: 80vh;
     border: rgb(211, 219, 219) solid;
  }
 .third{
-    display: flex;
-    flex-direction: column;
     background-color: #ffffff;
     width: 25%;
-    min-height: 80vh;
-    height: fit-content;
+    height: 80vh;
     padding: 1.5%;
     border: rgb(211, 219, 219) solid;
 }
 .list li{
     margin: 1rem;
     list-style: none;
+}
+.bild{
+    text-align: center;
 }
 @media screen and (max-width:1024px){
     .main{
@@ -72,13 +68,16 @@ body{
     }
     .contact{
         width: 80%;
-        margin: 20px;
+        margin: 2%;
+        height: fit-content;
     }
     .second{
         width: 80%;
-        margin: 20px;
+        margin: 2%;
+        height: fit-content;
     }
     .third{
         width: 80%;
-        margin: 20px;
+        margin: 2%;
+        height: fit-content;
     }
