--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 p{
     color:rgb(0, 0, 0);
     text-align: left;
-    
 }
 h1{
     color:rgb(0, 0, 0);
@@ -22,6 +21,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Arial;
 }
 .main{
     display: flex;
