--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ h2{
     color:rgb(0, 0, 0);
     text-align: center;
 }
+h3{
+    color:rgb(0, 0, 0);
+    text-align: center;
+}
 body{
     background-image: url('R.jpg');
     background-repeat: no-repeat;
